k8s/passbolt/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-sql-proxy-mysql
  namespace: passbolt
spec:
  type: ExternalName
  externalName: cloud-sql-proxy-mysql.cloud-sql-proxy-mysql.svc.cluster.local
  ports:
  - port: 3306
