k8s/passbolt/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: passbolt
  name: passbolt
  namespace: passbolt
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 4443
  selector:
    app: passbolt-pods
