k8s/passbolt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passbolt-ingress
  namespace: passbolt
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - passbolt.basedosdados.org
    secretName: passbolt-tls
  rules:
  - host: passbolt.basedosdados.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: passbolt
            port:
              number: 80
